Реализован новый функционал: расчет времени выполнения задач и проверка пересечений. Добавлены поля duration, startTime, endTime