@@ -6,6 +6,8 @@ import tracker.model.*;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.time.Duration;
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -67,7 +69,7 @@ public class FileBackedTaskManager extends InMemoryTaskManager {
     public void save() {
         try {
             List<String> lines = new ArrayList<>();
-            lines.add("id,type,name,status,description,epic");
+            lines.add("id,type,name,status,description,epic,duration,startTime,endTime");
 
             for (Task task : getTasks()) {
                 lines.add(task.toCsvString());
@@ -78,11 +80,14 @@ public class FileBackedTaskManager extends InMemoryTaskManager {
             for (Subtask subtask : getSubtasks()) {
                 lines.add(subtask.toCsvString());
             }
+
+            // Удаление запятой в конце последней строки
             if (lines.size() > 1) {
-                String lineLast = lines.getLast();
-                lineLast = lines.getLast().substring(0, lineLast.length() - 1);
-                lines.set(lines.size() - 1, lineLast);
+                String lastLine = lines.get(lines.size() - 1);
+                lastLine = lastLine.endsWith(",") ? lastLine.substring(0, lastLine.length() - 1) : lastLine;
+                lines.set(lines.size() - 1, lastLine);
             }
+
             Files.write(file.toPath(), lines);
         } catch (IOException e) {
             throw new ManagerSaveException("Ошибка сохранения файла", e);
@@ -94,7 +99,6 @@ public class FileBackedTaskManager extends InMemoryTaskManager {
         try {
             String content = Files.readString(file.toPath());
             String[] lines = content.split("\n");
-
 
             for (int i = 1; i < lines.length; i++) {
                 String line = lines[i].trim();
@@ -121,12 +125,21 @@ public class FileBackedTaskManager extends InMemoryTaskManager {
         String name = parts[2].trim();
         Status status = Status.valueOf(parts[3].trim());
         String description = parts[4].trim();
+        Duration duration = parts.length > 5 && !parts[5].trim().isEmpty() ?
+                Duration.ofMinutes(Long.parseLong(parts[5].trim())) : null;
+        LocalDateTime startTime = parts.length > 6 && !parts[6].trim().isEmpty() ?
+                LocalDateTime.parse(parts[6].trim()) : null;
+        LocalDateTime endTime = parts.length > 7 && !parts[7].trim().isEmpty() ?
+                LocalDateTime.parse(parts[7].trim()) : null;
 
         switch (type) {
             case TASK:
                 Task task = new Task(name, description);
                 task.setTaskId(id);
                 task.setStatus(status);
+                task.setDuration(duration);
+                task.setStartTime(startTime);
+                task.setEndTime(endTime);
                 return task;
             case EPIC:
                 Epic epic = new Epic(name, description);
@@ -134,13 +147,16 @@ public class FileBackedTaskManager extends InMemoryTaskManager {
                 epic.setStatus(status);
                 return epic;
             case SUBTASK:
-                if (parts.length < 6) {
+                if (parts.length < 8) {
                     throw new IllegalArgumentException("Некорректный формат строки для подзадачи: " + value);
                 }
                 int epicId = Integer.parseInt(parts[5].trim());
                 Subtask subtask = new Subtask(name, description, epicId);
                 subtask.setTaskId(id);
                 subtask.setStatus(status);
+                subtask.setDuration(duration);
+                subtask.setStartTime(startTime);
+                subtask.setEndTime(endTime);
                 return subtask;
             default:
                 throw new IllegalArgumentException("Неизвестный тип задачи: " + type);
